--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^16.5.2",
     "react-grid-gallery": "^0.5.3",
     "react-infinite-scroll-component": "^4.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
